# FutureTerm

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  clippy.toml  dev.sh  rustfmt.toml
.github/workflows/: ci.yml  deploy-pages.yml
apps/native/: Cargo.toml
apps/native/src/: main.rs
apps/web/: CNAME  Cargo.toml  index.html  worker_bootstrap.js
apps/web/src/: actor_bridge.rs  actor_system.rs  connection.rs  hex_view.rs  lib.rs  main.rs  mavlink_view.rs  protocol.rs  terminal_metadata.rs  ui.rs  worker_entry.rs  worker_logic.rs  xterm.rs
apps/web/src/connection/: driver.rs  prober.rs  reconnect.rs  types.rs
apps/web/src/ui/: sidebar.rs
crates/actor-protocol/: Cargo.toml
crates/actor-protocol/src/: errors.rs  lib.rs  messages.rs  state.rs
crates/actor-runtime/: Cargo.toml
crates/actor-runtime/src/: actor.rs  cancellation.rs  channels.rs  lib.rs  logging.rs  supervision.rs
crates/analysis/src/: lib.rs
crates/connection-actors/: Cargo.toml
crates/connection-actors/src/: backoff.rs  constants.rs  data_processing.rs  lib.rs  port_actor.rs  probe_actor.rs  reconnect_actor.rs  state_actor.rs
crates/connection-actors/tests/: integration_test.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: lib.rs  transport.rs
crates/decoders/: Cargo.toml
crates/decoders/dec-mavlink/: Cargo.toml
crates/decoders/dec-mavlink/src/: lib.rs
crates/decoders/dec-nmea/: Cargo.toml
crates/decoders/dec-nmea/src/: lib.rs
crates/decoders/src/: hex.rs  lib.rs  utf8.rs
crates/framing/: Cargo.toml
crates/framing/src/: cobs_impl.rs  lib.rs  lines.rs  raw.rs  slip_impl.rs
crates/probe/: Cargo.toml
crates/probe/src/: lib.rs
crates/transport-native/: Cargo.toml
crates/transport-native/src/: lib.rs
crates/transport-webserial/: Cargo.toml
crates/transport-webserial/src/: lib.rs
scripts/: run_python_verify.sh  verify_native.sh
specs/: SPEC-0001-product-architecture.md  SPEC-0002-transport-layer.md  SPEC-0003-framing-decoder.md  SPEC-0004-ui-performance.md  SPEC-0005-probe-scoring.md
