[workspace]
members = [
    "crates/core-types",
    "crates/framing",
    "crates/decoders",
    "crates/decoders/dec-nmea",
    "crates/decoders/dec-mavlink",
    "crates/probe",
    "crates/transport-webserial",
    "crates/transport-native",
    # apps/web will be a separate npm project or part of workspace if using wasm-pack extensively
    # apps/native will be a cargo project
    "apps/native", 
]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
