[workspace]
members = [
    "crates/core-types",
    "crates/framing",
    "crates/decoders",
    "crates/decoders/dec-nmea",
    "crates/transport-webserial",
    # apps/web will be a separate npm project or part of workspace if using wasm-pack extensively
    # apps/native will be a cargo project
    "apps/native", 
    "apps/web", "crates/analysis",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release.package.app-web]
opt-level = "z"
