[package]
name = "app-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlDivElement", "Window", "Document", "Element"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0"
core-types = { path = "../../crates/core-types" }
# Note: transport-webserial creates a circular dependency if used directly in UI thread logic usually?
# No, UI thread initiates connection? Wait, SPEC-0001 said "Serial Worker".
# So UI thread does NOT depend on transport-webserial directly.
# UI thread depends on Worker messaging. 
# The Worker (which will be a separate binary target or just a separate entry point) depends on transport.

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
