[package]
name = "app-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "worker"
path = "src/worker_entry.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlDivElement", "Window", "Document", "Element", "Worker", "WorkerGlobalScope", "DedicatedWorkerGlobalScope", "MessageEvent", "Serial", "SerialPort", "SerialOptions", "Navigator", "SerialPortRequestOptions", "TextDecoder", "TextDecodeOptions", "ResizeObserver", "ResizeObserverEntry"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0"
core-types = { path = "../../crates/core-types" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
transport-webserial = { path = "../../crates/transport-webserial" }
framing = { path = "../../crates/framing" }
decoders = { path = "../../crates/decoders" }
js-sys = "0.3"


