[package]
name = "actor-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
actor-protocol = { path = "../actor-protocol" }
futures = "0.3"
futures-channel = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "SerialPort"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
