[package]
name = "transport-webserial"
version = "0.1.0"
edition = "2021"

[dependencies]
core-types = { path = "../core-types" }
web-sys = { version = "0.3", features = ["Serial", "SerialPort", "SerialOptions", "ReadableStream", "ReadableStreamDefaultReader", "WritableStream", "WritableStreamDefaultWriter", "SerialOutputSignals", "Window", "Performance"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
thiserror = "1.0"
