[package]
name = "transport-webserial"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Serial", "SerialPort", "SerialOptions", "ReadableStream", "WritableStream", "ReadableStreamDefaultReader", "WritableStreamDefaultWriter", "Window", "Performance", "console"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
core-types = { path = "../core-types" }
